# CG-Net

./: .gitignore  CITATION.cff  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt
configs/: default.json
scripts/: run_from_config.py  run_paper.py  smoke_test.py
src/traffic_gnn/: __init__.py  baselines.py  compat.py  config.py  data.py  losses.py  models.py  pipeline.py  plotting.py  train.py
