[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-gnn-paper"
version = "0.1.0"
description = "Modular CG-Uncertainty-Net implementation for traffic forecasting papers."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "matplotlib",
  "scikit-learn",
  "h5py"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
